# Pong

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  Pong  client.c  client.h  cmake_install.cmake  color.c  color.h  coordinates.c  coordinates.h  network_msg.c  network_msg.h  pong.c  pong.h  pong_ball.c  pong_ball.h  pong_client.c  pong_client.h  pong_event.c  pong_event.h  pong_field.c  pong_field.h  pong_game.c  pong_game.h  pong_init.c  pong_init.h  pong_menu.c  pong_menu.h  pong_msg.c  pong_msg.h  pong_opt.c  pong_opt.h  pong_paddle.c  pong_paddle.h  pong_refresh.c  pong_refresh.h  pong_score.c  pong_score.h  pong_server.c  pong_server.h  (+7 more)
